--- a/index.html
+++ b/index.html
@@ -6,7 +6,15 @@
   <title>Portfolio - Nahuel Argandoña</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="assets/icon/favicon.ico">
+  <meta name="description" content="Portfolio de Nahuel Argandoña, Desarrollador Web Full Stack especializado en Angular, React, Django y Python. Estudiante de Tecnicatura en Desarrollo de Software en ISPC.">
+  
+  <!-- Security Headers -->
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline' https://cdn.jsdelivr.net https://unpkg.com; style-src 'self' 'unsafe-inline' https://cdnjs.cloudflare.com https://cdn.jsdelivr.net https://unpkg.com https://necolas.github.io; img-src 'self' data: https: http:; font-src 'self' https://cdnjs.cloudflare.com; frame-src https://open.spotify.com; connect-src 'self' https://open.spotify.com;">
+  <meta http-equiv="X-Frame-Options" content="SAMEORIGIN">
+  <meta http-equiv="X-Content-Type-Options" content="nosniff">
+  <meta name="referrer" content="strict-origin-when-cross-origin">
+  <meta http-equiv="Permissions-Policy" content="geolocation=(), microphone=(), camera=()">
+  
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -76,20 +84,20 @@
             <section>
             
               <a href="https://www.canva.com/design/DAFoP4HTDqk/YW9Jg6z0ouwf7GeaChLSvg/view?utm_content=DAFoP4HTDqk&utm_campaign=designshare&utm_medium=link2&utm_source=uniquelinks&utlId=he143a9d067"
-                target="_blank" class="ver-cv">
-                <img
+                target="_blank" class="ver-cv" aria-label="Ver CV en Canva">
+                <img alt="CV en Canva"
                   src="https://img.shields.io/badge/CV--CANVA-%230077B5?style=for-the-badge&logo=curriculum&logoColor=white">
               </a>
-              <a href="./assets/CV_Nahuel_Argandona.pdf" target="_blank">
-                <img
+              <a href="./assets/CV_Nahuel_Argandona.pdf" target="_blank" aria-label="Descargar CV en formato ATS">
+                <img alt="CV ATS en PDF"
                   src="https://img.shields.io/badge/CV--ATS-%23333?style=for-the-badge&logo=adobe-acrobat-reader&logoColor=white">
               </a>
-              <a href="https://www.linkedin.com/in/Aubar48" target="_blank">
-                <img
+              <a href="https://www.linkedin.com/in/Aubar48" target="_blank" aria-label="Perfil de LinkedIn">
+                <img alt="LinkedIn"
                   src="https://img.shields.io/badge/-LinkedIn-%230077B5?style=for-the-badge&logo=linkedin&logoColor=white">
               </a>
-              <a href="https://github.com/Aubar48" target="_blank">
-                <img src="https://img.shields.io/badge/GitHub-%23333?style=for-the-badge&logo=github&logoColor=white">
+              <a href="https://github.com/Aubar48" target="_blank" aria-label="Perfil de GitHub">
+                <img alt="GitHub" src="https://img.shields.io/badge/GitHub-%23333?style=for-the-badge&logo=github&logoColor=white">
               </a>
             </section>
 
@@ -101,25 +109,25 @@
             </div>
 
             <section class="icons-skills">
-              <img align="center" alt="PYTHON" height="40" width="50"
+              <img align="center" alt="Python - Lenguaje de programación" height="40" width="50"
                 src="https://raw.githubusercontent.com/devicons/devicon/master/icons/python/python-original.svg">
-              <img align="center" alt="JS" height="30" width="40"
+              <img align="center" alt="JavaScript - Lenguaje de programación" height="30" width="40"
                 src="https://raw.githubusercontent.com/devicons/devicon/master/icons/javascript/javascript-plain.svg">
-              <img align="center" alt="HTML" height="30" width="40"
+              <img align="center" alt="HTML5 - Marcado web" height="30" width="40"
                 src="https://raw.githubusercontent.com/devicons/devicon/master/icons/html5/html5-original.svg">
-              <img align="center" alt="CSS" height="30" width="40"
+              <img align="center" alt="CSS3 - Estilos web" height="30" width="40"
                 src="https://raw.githubusercontent.com/devicons/devicon/master/icons/css3/css3-original.svg">
-              <img align="center" alt="Bootstrap" height="40" width="50"
+              <img align="center" alt="Bootstrap - Framework CSS" height="40" width="50"
                 src="https://raw.githubusercontent.com/devicons/devicon/master/icons/bootstrap/bootstrap-original.svg">
-              <img align="center" alt="tailwindcss" height="40" width="50"
+              <img align="center" alt="Tailwind CSS - Framework CSS" height="40" width="50"
                 src="https://raw.githubusercontent.com/devicons/devicon/master/icons/tailwindcss/tailwindcss-original.svg">
-              <img align="center" alt="REACT" height="40" width="50"
+              <img align="center" alt="React - Biblioteca JavaScript" height="40" width="50"
                 src="https://raw.githubusercontent.com/devicons/devicon/master/icons/react/react-original.svg">
-              <img align="center" alt="ANGULAR" height="40" width="50"
+              <img align="center" alt="Angular - Framework JavaScript" height="40" width="50"
                 src="https://raw.githubusercontent.com/devicons/devicon/master/icons/angular/angular-original.svg">
-              <img align="center" alt="MYSQL" height="40" width="50"
+              <img align="center" alt="MySQL - Base de datos" height="40" width="50"
                 src="https://raw.githubusercontent.com/devicons/devicon/master/icons/mysql/mysql-original.svg">
-              <img align="center" alt="MongoDb" height="40" width="50"
+              <img align="center" alt="MongoDB - Base de datos NoSQL" height="40" width="50"
                 src="https://raw.githubusercontent.com/devicons/devicon/master/icons/mongodb/mongodb-original.svg">
             </section>
 
@@ -240,8 +248,8 @@
                       <div class="d-flex gap-2 mb-3">
                         <span class="badge bg-primary">WordPress</span>
                         <span class="badge bg-success">PHP</span>
-                        <span class="badge bg-info">JavaScript</span>
-                        <span class="badge bg-warning">HTML/CSS</span>
+                        <span class="badge bg-info-accessible">JavaScript</span>
+                        <span class="badge bg-warning-accessible">HTML/CSS</span>
                       </div>
                       <div class="d-flex gap-2">
                         <a href="https://dges-cba.edu.ar/wp/" class="btn btn-outline-primary btn-sm" target="_blank">Demo</a>
@@ -261,7 +269,7 @@
                       <div class="d-flex gap-2 mb-3">
                         <span class="badge bg-primary">Angular</span>
                         <span class="badge bg-success">Bootstrap</span>
-                        <span class="badge bg-info">Typescript</span>
+                        <span class="badge bg-info-accessible">Typescript</span>
                         <span class="badge bg-primary">Django</span>
                       </div>
                       <div class="d-flex gap-2">
@@ -282,7 +290,7 @@
                       <div class="d-flex gap-2 mb-3">
                         <span class="badge bg-primary">React</span>
                         <span class="badge bg-success">Tailwindcss</span>
-                        <span class="badge bg-info">JavaScript</span>
+                        <span class="badge bg-info-accessible">JavaScript</span>
                         <span class="badge bg-primary">Api</span>
                       </div>
                       <div class="d-flex gap-2">
@@ -304,7 +312,7 @@
 
   <!-- Spotify Player -->
   <section class="container mb-5">
-    <iframe class="spotify-player shadow-sm"
+    <iframe class="spotify-player shadow-sm" title="Reproductor de Spotify - Lista de reproducción"
       src="https://open.spotify.com/embed/playlist/37i9dQZF1DX8Uebhn9wzrS?utm_source=generator&theme=0" width="100%"
       height="152" frameBorder="0" allowfullscreen=""
       allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
@@ -322,8 +330,8 @@
 
         <!-- Enlaces -->
         <div class="col-md-6 d-flex justify-content-md-end justify-content-center gap-3">
-          <a href="https://github.com/Aubar48" target="_blank" class="fs-4"><i class="fab fa-github"></i></a>
-          <a href="https://www.linkedin.com/in/aubar48/" target="_blank" class="fs-4"><i
+          <a href="https://github.com/Aubar48" target="_blank" class="fs-4" aria-label="GitHub de Nahuel Argandoña"><i class="fab fa-github"></i></a>
+          <a href="https://www.linkedin.com/in/aubar48/" target="_blank" class="fs-4" aria-label="LinkedIn de Nahuel Argandoña"><i
               class="fab fa-linkedin"></i></a>
         </div>
       </div>
